# ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Vehicles

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/point_cloud_processing/lib/point_cloud_processing/: circular_cloud  kd_tree  kitti_voxel  path_creation  pcd_import  plane_cloud  traffic_segmentation
install/point_cloud_processing/share/point_cloud_processing/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/point_cloud_processing/share/point_cloud_processing/cmake/: point_cloud_processingConfig.cmake
install/point_cloud_processing/share/point_cloud_processing/launch/: bring_rviz.launch.py  process_kitti.launch.py
install/point_cloud_processing/share/point_cloud_processing/rviz/: kitti_viz.rviz  kitti_viz2.rviz
install/ros2_kitti_publishers/lib/ros2_kitti_publishers/: kitti_publishers
install/ros2_kitti_publishers/share/ament_index/resource_index/package_run_dependencies/: ros2_kitti_publishers
install/ros2_kitti_publishers/share/ament_index/resource_index/parent_prefix_path/: ros2_kitti_publishers
install/ros2_kitti_publishers/share/ros2_kitti_publishers/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
log/: latest_build  latest_list
src/ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Behaviour/point_cloud_processing/: CMakeLists.txt
src/ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Behaviour/point_cloud_processing/launch/: rtab_mapping.launch.py
src/ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Behaviour/point_cloud_processing/point_clouds/: .1f75455fcb55e098ff2c4210f391621ca3863dde.cam  .366372ef5b0e121976bc0de5b9e57ba5afbc4fb.cam  .4b792960b12b4afb7b58bc6418f7d009de99d18f.cam  .f6e011ab803987fd4d1e69a016d15a5b7a323d.cam  circular.pcd  cloud_0.pcd  cloud_1.pcd  cloud_2.pcd  cloud_3.pcd  cloud_4.pcd  cloud_5.pcd  cloud_6.pcd  cloud_7.pcd  cloud_8.pcd  pass_xy_cloud.pcd  plane.cloud  plane.pcd  plane_segmented.pcd  voxel_cloud.pcd
src/ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Behaviour/point_cloud_processing/src/: 0_table_scene.cpp  1_planner_cloud.cpp  2_circular_cloud.cpp  3_filtering_segmentation.cpp  4_point_path_drawing.cpp  5_kitti_data_voxel.cpp  7_traffic_segmentation.cpp
src/ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Behaviour/turtlebot3_gazebo/: CMakeLists.txt
